fixed hero spacing

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -634,6 +634,14 @@ video {
   top: 50%;
 }
 
+.bottom-4{
+  bottom: 1rem;
+}
+
+.bottom-6{
+  bottom: 1.5rem;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -728,6 +736,10 @@ video {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
 }
 
 .line-clamp-1{
@@ -1076,6 +1088,10 @@ video {
   border-width: 4px;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .border-none{
   border-style: none;
 }
@@ -1116,6 +1132,11 @@ video {
 
 .bg-transparent{
   background-color: transparent;
+}
+
+.bg-red-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-hero-pattern{
@@ -1840,8 +1861,20 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:bottom-32{
+    bottom: 8rem;
+  }
+
+  .md\:bottom-24{
+    bottom: 6rem;
+  }
+
   .md\:mt-40{
     margin-top: 10rem;
+  }
+
+  .md\:mt-28{
+    margin-top: 7rem;
   }
 
   .md\:h-\[550px\]{
